<resources>
    <string name="app_name" translatable="false">VkVideoViewer</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="search">Search</string>
    <string name="something_went_wrong">Looks like something went wrong!</string>
    <string name="check_connection">Please, check that your VPN is turned ON and your internet connection and then try again</string>
    <string name="retry">Retry</string>
    <string name="video_quality">Quality</string>
    <string name="speed_video">Speed</string>
    <string name="ok">Ok</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="saved">Saved</string>
    <string name="tiny_quality" translatable="false">270р</string>
    <string name="small_quality" translatable="false">360р</string>
    <string name="medium_quality" translatable="false">720р</string>
    <string name="slowest_speed" translatable="false">0.5x</string>
    <string name="normal_speed" translatable="false">1x</string>
    <string name="faster_speed" translatable="false">1.5x</string>
    <string name="medium_fast_speed" translatable="false">2x</string>
    <string name="nothing_found_for_this_query">Nothing found for this query</string>
    <string-array name="image_categories">
        <item>All</item>
        <item>Backgrounds</item>
        <item>Fashion</item>
        <item>Nature</item>
        <item>Science</item>
        <item>Education</item>
        <item>Feelings</item>
        <item>Health</item>
        <item>People</item>
        <item>Religion</item>
        <item>Places</item>
        <item>Animals</item>
        <item>Industry</item>
        <item>Computer</item>
        <item>Food</item>
        <item>Sports</item>
        <item>Transportation</item>
        <item>Travel</item>
        <item>Buildings</item>
        <item>Business</item>
        <item>Music</item>
    </string-array>
</resources>