<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/button_slowest"
        style="@style/TextAppearance.AppCompat.Medium.Regular.VVV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/slowest_speed"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/button_normal"
        style="@style/TextAppearance.AppCompat.Medium.Regular.VVV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/normal_speed"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_slowest" />

    <TextView
        android:id="@+id/button_faster"
        style="@style/TextAppearance.AppCompat.Medium.Regular.VVV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/faster_speed"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_normal" />

    <TextView
        android:id="@+id/button_fastest"
        style="@style/TextAppearance.AppCompat.Medium.Regular.VVV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/medium_fast_speed"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_faster" />

    <TextView
        android:id="@+id/button_ok"
        style="@style/TextAppearance.AppCompat.Small.Bold.VVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:padding="20dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_fastest" />

</androidx.constraintlayout.widget.ConstraintLayout>